migrate doc from wiki.jenkins.io to github